Simplest product creation

--- a/index.html
+++ b/index.html
@@ -15,18 +15,7 @@
 			<main>
 				<h2>Product listing page</h2>
 				<ul class="products">
-					<li>
-						<img
-							src="https://via.placeholder.com/305"
-							srcset="
-								https://via.placeholder.com/305?text=01-305w.jpg 305w,
-								https://via.placeholder.com/610?text=01-610w.jpg 610w
-							"
-							sizes="(min-width: 1280px) 305px, 50vw"
-							alt="Image 01"
-						/>
-						<div class="title">Product 01</div>
-					</li>
+					<!-- JS Generated -->
 				</ul>
 			</main>
 			<footer>
@@ -45,4 +34,5 @@
 			</footer>
 		</div>
 	</body>
+	<script src="js/index.js"></script>
 </html>
