--- a/index.html
+++ b/index.html
@@ -34,5 +34,5 @@
 			</footer>
 		</div>
 	</body>
-	<script src="js/index.js"></script>
+	<script type="module" src="js/index.js"></script>
 </html>
