HTML renamed ".commands" to "#uiSettings"

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</header>
 			<main>
 				<h2>Product listing page</h2>
-				<section class="commands">
+				<section id="uiSettings">
 					<fieldset>
 						<input
 							type="radio"
