Improved UX through label expansion

--- a/index.html
+++ b/index.html
@@ -19,19 +19,33 @@
 				<h2>Product listing page</h2>
 				<section id="uiSettings">
 					<fieldset>
-						<input
-							type="radio"
-							id="blurry"
-							name="crispyBlurry"
-							checked
-						/>
-						<label for="blurry">Flexible, but blurry</label>
-						<input type="radio" id="sharp" name="crispyBlurry" />
-						<label for="sharp">Sharp and fixed</label>
+						<label>
+							<input
+								type="radio"
+								id="blurry"
+								name="crispyBlurry"
+								checked
+							/>
+							Flexible, but blurry</label
+						>
+						<label>
+							<input
+								type="radio"
+								id="sharp"
+								name="crispyBlurry"
+							/>
+							Sharp and fixed
+						</label>
 					</fieldset>
 					<fieldset>
-						<input type="checkbox" id="useWebP" name="useWebP" />
-						<label for="useWebP">Use webP?</label>
+						<label>
+							<input
+								type="checkbox"
+								id="useWebP"
+								name="useWebP"
+							/>
+							Use webP?
+						</label>
 					</fieldset>
 				</section>
 				<ul class="products">
