Label "fixed, but sharp"

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								name="crispyBlurry"
 								checked
 							/>
-							Sharp and fixed
+							Fixed, but sharp
 						</label>
 					</fieldset>
 					<fieldset>
