Changed webP UI setting copy

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 								id="useWebP"
 								name="useWebP"
 							/>
-							Use webP?
+							Provide WebP alternative
 						</label>
 					</fieldset>
 				</section>
